--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 .card {
     max-width: 18rem;
 }
+
+h1 {
+    margin-top: 1ex;
+}
+
+.section-button:hover {
+    background-color: rgb(231, 231, 231);
+}
+
+.individual-selector:hover {
+    background-color: rgb(246, 244, 244);
+}
